--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/Users/kyugalang/Desktop/Web Development/HTML Personal Site/Images/Kevin Galang Circle.png" alt="kevin profile picture"></td>
+      <td><img src="Images/Kevin Galang Circle.png" alt="kevin profile picture"></td>
       <td>
         <h1>Kevin Galang</h1>
         <p><em>Beginner of <Strong><a href="https://www.twitch.tv/finalkenhee">Many Great Things to Come</a></strong></em></p>
