--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Kevin's Personal Site</title>
+<link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Images/Kevin Galang Circle.png" alt="kevin profile picture"></td>
+      <td><img src="/Users/kyugalang/Desktop/Web Development/HTML Personal Site/Images/Kevin Galang Circle.png" alt="kevin profile picture"></td>
       <td>
         <h1>Kevin Galang</h1>
         <p><em>Beginner of <Strong><a href="https://www.twitch.tv/finalkenhee">Many Great Things to Come</a></strong></em></p>
@@ -27,13 +29,8 @@
     <li> <a href="https://www.nvcc.edu/loudoun/index.html">Northern Virgina Community College</a> </li>
   </ul>
   <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Gaming</li>
-    <li>listening to music</li>
-    <li>coding</li>
-  </ol>
-  <hr>
+
+  
   <h3>Extra Curriculars</h3>
   <table cellspacing="10">
     <thead>
@@ -75,6 +72,7 @@
   </table>
   <hr>
   <a href="Contact Me.html">Contact Me</a>
+  <a href="Hobbies.html">Hobbies</a>
 </body>
 
 </html>
